--- a/src/pages/user/[id]/season/[seasonId].astro
+++ b/src/pages/user/[id]/season/[seasonId].astro
@@ -2,6 +2,7 @@
 import handleResults from '$lib/utils/handle-session-results';
 import fieldIdToLabelMap from '$lib/utils/field-id-to-label-map';
 import { connectToDatabase } from '$lib/mongodb';
+import type { Subsession } from '$lib/types';
 export async function getStaticPaths() {
 	const userIds = [300752, 815162];
 	const dbConnection = await connectToDatabase();
@@ -15,12 +16,12 @@ export async function getStaticPaths() {
 const { id, seasonId } = Astro.params;
 const dbConnection = await connectToDatabase();
 const db = dbConnection.db;
-const collection = db.collection('subsessions');
+const collection = db.collection<Subsession>('subsessions');
 const subsessions = await collection.find({
 	season_id: Number(seasonId),
 	'session_results.2.results': { $elemMatch: { cust_id: Number(id) }},
 }).sort({_id: 1}).toArray();
-const tableData = subsessions.map((subsession) => {
+const results = subsessions.map((subsession) => {
 	const {
 		subsession_id,
 		track,
@@ -49,7 +50,7 @@ const tableData = subsessions.map((subsession) => {
 		car_name,
 		aggregate_champ_points,
 	} = subsession.session_results[2].results.filter((v: any) => v.cust_id === Number(id))[0];
-	const { group_name: License } = allowed_licenses.slice(0, 2).pop();
+	const { group_name: License } = allowed_licenses.slice(0, 2).pop() || {};
 
 	return {
 		subsession_id,
@@ -77,8 +78,8 @@ const tableData = subsessions.map((subsession) => {
 		aggregate_champ_points,
 	}
 });
-const keysToDisplay = new Set(Object.keys(tableData[0]));
-const { keysArray, handledResults } = handleResults({ keysToDisplay, results: tableData });
+const keysToDisplay = new Set(Object.keys(results[0]));
+const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 ---
 
 <html lang="en">
@@ -92,9 +93,9 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results: ta
 	<body class="bg-gray-900 text-white font-sans pt-2">
 		<div class="grid grid-cols-1 pt-6">
 			<table x-ref="Table" x-data="table" class="text-center col-span-1">
-				<tr x-ref="Headings">{Object.keys(tableData[0]).map((key) => (<th id={`Table ${key} ${tableData.length}`} class="border-2" x-on:click="sort">{fieldIdToLabelMap.get(key) || key}</th>))}</tr>
+				<tr x-ref="Headings">{keysArray.map((key) => (<th id={`Table ${key} ${results.length}`} class="border-2" x-on:click="sort">{fieldIdToLabelMap.get(key) || key}</th>))}</tr>
 				{handledResults.map(
-					(result, rowNumber) => (<tr x-ref={`Table ${rowNumber}`}>{Object.keys(result).map((key: string) => (<td x-ref={`Table ${keysArray[Number(key)]} ${rowNumber}`} class="border-2">{key === '0' ? (<a rel="prefetch" href={`/Stat-N-Track/subsession/${result[key]}`}>{result[key]}</a>): result[key]}</td>))}</tr>),
+					(result, rowNumber) => (<tr x-ref={`Table ${rowNumber}`}>{Object.keys(result).map((key: string) => (<td x-ref={`Table ${keysArray[Number(key)]} ${rowNumber} ${result[key]}`} class="border-2">{key === '0' ? (<a rel="prefetch" href={`/Stat-N-Track/subsession/${result[key]}`}>{result[key]}</a>): result[key]}</td>))}</tr>),
 				)}
 			</table>
 		</div>
