--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import DefaultLayout from '../layouts/default.astro';
+import DefaultLayout from "../layouts/default.astro";
 ---
 
 <DefaultLayout>
@@ -11,4 +11,4 @@ import DefaultLayout from '../layouts/default.astro';
 			<a rel="prefetch" href="/Stat-N-Track/user/815162">Jack Glenzinski</a>
 		</div>
 	</div>
-</DefaultLayout
+</DefaultLayout>
