--- a/src/pages/user/[id]/subsessions.astro
+++ b/src/pages/user/[id]/subsessions.astro
@@ -1,19 +1,21 @@
 ---
-import handleResults from '$lib/utils/handle-session-results';
-import fieldIdToLabelMap from '$lib/utils/field-id-to-label-map';
-import { connectToDatabase } from '$lib/mongodb';
-import type { Subsession } from '$lib/types';
+import handleResults from "$lib/utils/handle-session-results";
+import fieldIdToLabelMap from "$lib/utils/field-id-to-label-map";
+import { connectToDatabase } from "$lib/mongodb";
+import type { Subsession } from "$lib/types";
 export function getStaticPaths() {
-	return [
-		{ params: { id: 300752 } },
-		{ params: { id: 815162 } }
-	];
-};
+	return [{ params: { id: 300752 } }, { params: { id: 815162 } }];
+}
 const { id } = Astro.params;
 const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
-const collection = db.collection<Subsession>('subsessions');
-const subsessions = await collection.find({ 'session_results.2.results': { $elemMatch: { cust_id: Number(id) }}}).sort({_id: -1}).toArray();
+const collection = db.collection<Subsession>("subsessions");
+const subsessions = await collection
+	.find({
+		"session_results.2.results": { $elemMatch: { cust_id: Number(id) } },
+	})
+	.sort({ _id: -1 })
+	.toArray();
 const results = subsessions.map((subsession) => {
 	const {
 		subsession_id,
@@ -42,12 +44,16 @@ const results = subsessions.map((subsession) => {
 		incidents,
 		car_name,
 		aggregate_champ_points,
-	} = subsession.session_results[2].results.filter((v: any) => v.cust_id === Number(id))[0];
+	} = subsession.session_results[2].results.filter(
+		(v: any) => v.cust_id === Number(id)
+	)[0];
 	const { group_name: License } = allowed_licenses.slice(0, 2).pop() || {};
 
 	return {
 		subsession_id,
-		Track: `${track.track_name} ${track.config_name !== 'N/A' ? track.config_name : ''}`,
+		Track: `${track.track_name} ${
+			track.config_name !== "N/A" ? track.config_name : ""
+		}`,
 		Corners: corners_per_lap,
 		License,
 		license_category,
@@ -69,7 +75,7 @@ const results = subsessions.map((subsession) => {
 		incidents,
 		car_name,
 		aggregate_champ_points,
-	}
+	};
 });
 const keysToDisplay = new Set(Object.keys(results[0]));
 const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
@@ -86,16 +92,51 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 	<body class="bg-gray-900 text-white font-sans pt-2">
 		<div class="grid grid-cols-1 pt-6">
 			<table x-ref="Table" x-data="table" class="text-center col-span-1">
-				<tr x-ref="Headings">{keysArray.map((key) => (<th id={`Table ${key} ${results.length}`} class="border-2" x-on:click="sort">{fieldIdToLabelMap.get(key) || key}</th>))}</tr>
-				{handledResults.map(
-					(result, rowNumber) => (<tr x-ref={`Table ${rowNumber}`}>{Object.keys(result).map((key: string) => (<td x-ref={`Table ${keysArray[Number(key)]} ${rowNumber} ${result[key]}`} class="border-2">{key === '0' ? (<a rel="prefetch" href={`/Stat-N-Track/subsession/${result[key]}`}>{result[key]}</a>): result[key]}</td>))}</tr>),
-				)}
+				<tr x-ref="Headings"
+					>{
+						keysArray.map((key) => (
+							<th
+								id={`Table ${key} ${results.length}`}
+								class="border-2"
+								x-on:click="sort"
+							>
+								{fieldIdToLabelMap.get(key) || key}
+							</th>
+						))
+					}</tr
+				>
+				{
+					handledResults.map((result, rowNumber) => (
+						<tr x-ref={`Table ${rowNumber}`}>
+							{Object.keys(result).map((key: string) => (
+								<td
+									x-ref={`Table ${keysArray[Number(key)]} ${rowNumber} ${
+										result[key]
+									}`}
+									id={`${key}~${rowNumber}~${result[key]}`}
+									class="border-2"
+								>
+									{key === "0" ? (
+										<a
+											rel="prefetch"
+											href={`/Stat-N-Track/subsession/${result[key]}`}
+										>
+											{result[key]}
+										</a>
+									) : (
+										result[key]
+									)}
+								</td>
+							))}
+						</tr>
+					))
+				}
 			</table>
 		</div>
 		<script>
-			import Alpine from 'alpinejs';
-			import Table from '../../../lib/components/table/index.ts';
-			Alpine.data('table', Table);
+			import Alpine from "alpinejs";
+			import Table from "../../../lib/components/table/index.ts";
+			Alpine.data("table", Table);
 			Alpine.start();
 		</script>
 	</body>
