--- a/src/lib/components/subsession/raceSummary.astro
+++ b/src/lib/components/subsession/raceSummary.astro
@@ -1,8 +1,8 @@
 ---
-import parseLapTime from '$lib/utils/parse-lap-time';
-import type { Subsession } from '$lib/types';
+import parseLapTime from "$lib/utils/parse-lap-time";
+import type { Subsession } from "$lib/types";
 interface Props {
-  subsession: Subsession
+  subsession: Subsession;
 }
 const { subsession } = Astro.props;
 const {
@@ -14,7 +14,7 @@ const {
   event_strength_of_field,
   start_time,
   end_time,
-} = subsession
+} = subsession;
 ---
 
 <div class="text-center pb-6">
