--- a/src/lib/components/track/info.astro
+++ b/src/lib/components/track/info.astro
@@ -1,8 +1,8 @@
 ---
-import type { Track } from '$lib/types';
+import type { Track } from "$lib/types";
 interface Props {
-  cornersPerLap: number,
-  track: Track
+  cornersPerLap: number;
+  track: Track;
 }
 const { cornersPerLap, track } = Astro.props;
 const { track_name, config_name, category } = track;
