--- a/src/lib/components/session-results/tables.astro
+++ b/src/lib/components/session-results/tables.astro
@@ -1,34 +1,67 @@
 ---
-import PracticeResults from '$lib/components/session-results/practice.astro';
-import QualifyingResults from '$lib/components/session-results/qualifying.astro';
-import RaceResults from '$lib/components/session-results/race.astro';
-import type { Session } from '$lib/types';
+import PracticeResults from "$lib/components/session-results/practice.astro";
+import QualifyingResults from "$lib/components/session-results/qualifying.astro";
+import RaceResults from "$lib/components/session-results/race.astro";
+import type { Session } from "$lib/types";
 const { sessions } = Astro.props;
-const practice: Session = sessions.find((session: Session) => session.simsession_type_name.match(/PRACTICE/i));
-const qualifying: Session = sessions.find((session: Session) => session.simsession_type_name.match(/QUALIFY/i));
-const race: Session = sessions.find((session: Session) => session.simsession_type_name.match(/RACE/i));
+const practice: Session = sessions.find((session: Session) =>
+  session.simsession_type_name.match(/PRACTICE/i)
+);
+const qualifying: Session = sessions.find((session: Session) =>
+  session.simsession_type_name.match(/QUALIFY/i)
+);
+const race: Session = sessions.find((session: Session) =>
+  session.simsession_type_name.match(/RACE/i)
+);
 ---
 
 <div x-data="tables">
   <div class="grid grid-cols-3 text-center pb-6">
-  <button id="PRACTICE QUALIFY RACE" x-on:click="toggle" class="border-2 bg-gray-700">
-    Practice Table
-  </button>
-  <button id="QUALIFY PRACTICE RACE" x-on:click="toggle" class="border-2 bg-gray-700">
-    Qualifying Table
-  </button>
-  <button id="RACE PRACTICE QUALIFY" x-on:click="toggle" class="border-2 bg-gray-700">
-    Race Table
-  </button>
+    <button
+      id="PRACTICE QUALIFY RACE"
+      x-on:click="toggle"
+      class="border-2 bg-gray-700"
+    >
+      Practice Table
+    </button>
+    <button
+      id="QUALIFY PRACTICE RACE"
+      x-on:click="toggle"
+      class="border-2 bg-gray-700"
+    >
+      Qualifying Table
+    </button>
+    <button
+      id="RACE PRACTICE QUALIFY"
+      x-on:click="toggle"
+      class="border-2 bg-gray-700"
+    >
+      Race Table
+    </button>
   </div>
   <div x-if="true">
-    <div x-cloak x-show="PRACTICE" x-transition:enter.duration.500ms x-transition:leave.duration.0ms>
+    <div
+      x-cloak
+      x-show="PRACTICE"
+      x-transition:enter.duration.500ms
+      x-transition:leave.duration.0ms
+    >
       <PracticeResults session={practice} />
     </div>
-    <div x-cloak x-show="QUALIFY" x-transition:enter.duration.500ms x-transition:leave.duration.0mss>
+    <div
+      x-cloak
+      x-show="QUALIFY"
+      x-transition:enter.duration.500ms
+      x-transition:leave.duration.0mss
+    >
       <QualifyingResults session={qualifying} />
     </div>
-    <div x-cloak x-show="RACE" x-transition:enter.duration.500ms x-transition:leave.duration.0ms>
+    <div
+      x-cloak
+      x-show="RACE"
+      x-transition:enter.duration.500ms
+      x-transition:leave.duration.0ms
+    >
       <RaceResults session={race} />
     </div>
   </div>
