--- a/src/lib/components/subsession/relevantIds.astro
+++ b/src/lib/components/subsession/relevantIds.astro
@@ -1,35 +1,45 @@
 ---
-import type { Session, SessionResult, Subsession } from '$lib/types';
+import type { Session, SessionResult, Subsession } from "$lib/types";
 interface Props {
-  subsession: Subsession
-  sessions: Array<Session>
+  subsession: Subsession;
+  sessions: Array<Session>;
 }
 const { subsession, sessions } = Astro.props;
 const relevantIds = Object.keys(subsession)
-      .sort()
-      .filter((key) => key.match(/_id$/) && Number(JSON.stringify(subsession[key as keyof Subsession])) > 0)
-      .map((key) => (`${key}: ${JSON.stringify(subsession[key as keyof Subsession])}`));
+  .sort()
+  .filter(
+    (key) =>
+      key.match(/_id$/) &&
+      Number(JSON.stringify(subsession[key as keyof Subsession])) > 0
+  )
+  .map(
+    (key) => `${key}: ${JSON.stringify(subsession[key as keyof Subsession])}`
+  );
 const relevantIdMap: Record<string, Set<number>> = {};
-const excludeKeys = new Set(['cust_id', 'reason_out_id']);
+const excludeKeys = new Set(["cust_id", "reason_out_id"]);
 sessions.forEach((session: Session) => {
   const { results } = session;
   results.forEach((result) => {
     Object.keys(result).forEach((key) => {
       if (key.match(/_id$/) && !excludeKeys.has(key)) {
         if (relevantIdMap[key]) {
-          relevantIdMap[key].add(Number(result[key as keyof SessionResult]))
+          relevantIdMap[key].add(Number(result[key as keyof SessionResult]));
         } else {
-          relevantIdMap[key] = new Set([Number(result[key as keyof SessionResult])]);
+          relevantIdMap[key] = new Set([
+            Number(result[key as keyof SessionResult]),
+          ]);
         }
       }
     });
   });
 });
-const otherRelevantIdsList = Object.keys(relevantIdMap).sort().map((key) => `${key}: ${Array.from(relevantIdMap[key]).join(', ')}`);
+const otherRelevantIdsList = Object.keys(relevantIdMap)
+  .sort()
+  .map((key) => `${key}: ${Array.from(relevantIdMap[key]).join(", ")}`);
 ---
 
 <div class="text-center row-span-1">
   Relevant IDs
-  {relevantIds.map((id) => (<li>{id}</li>))}
-  {otherRelevantIdsList.map((value) => (<li>{value}</li>))}
+  {relevantIds.map((id) => <li>{id}</li>)}
+  {otherRelevantIdsList.map((value) => <li>{value}</li>)}
 </div>
