--- a/src/lib/layouts/default.astro
+++ b/src/lib/layouts/default.astro
@@ -14,18 +14,16 @@ const seoDescription = description || "An iRacing planner and statistics analyze
     <meta name="description" content={seoDescription} />
     <title>{seoTitle}</title>
   </head>
-  <body>
-    <div class="bg-gray-900 text-white font-sans">
-      <div class="text-center border-white border-2">
-        <p class="block lg:text-7xl md:text-4xl sm-text-3xl break-words text-center">Stat 'N' Track</p>
-        <p class="block lg:text-4xl md:text-xl sm:text-lg break-words text-center pt-2">
-          An iRacing planner and statistics analyzer
-        </p>
-        <div class="block lg:text-3xl md:text-lg sm:text-md break-words text-center py-2">
-          <a href="/Stat-N-Track/" rel="prefetch">Home</a>
-        </div>
+  <body class="bg-gray-900 text-white font-sans">
+    <div class="text-center border-white border-2">
+      <p class="block lg:text-7xl md:text-4xl sm-text-3xl break-words text-center">Stat 'N' Track</p>
+      <p class="block lg:text-4xl md:text-xl sm:text-lg break-words text-center pt-2">
+        An iRacing planner and statistics analyzer
+      </p>
+      <div class="block lg:text-3xl md:text-lg sm:text-md break-words text-center py-2">
+        <a href="/Stat-N-Track/" rel="prefetch">Home</a>
       </div>
-      <slot />
     </div>
+    <slot />
   </body>
 </html>
