--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import DefaultLayout from "../layouts/default.astro";
+import DefaultLayout from "$lib/layouts/default.astro";
 ---
 
 <DefaultLayout>
