--- a/src/pages/user/[id]/index.astro
+++ b/src/pages/user/[id]/index.astro
@@ -1,5 +1,5 @@
 ---
-import DefaultLayout from "../../../layouts/default.astro";
+import DefaultLayout from "$lib/layouts/default.astro";
 export function getStaticPaths() {
 	return [{ params: { id: 300752 } }, { params: { id: 815162 } }];
 }
