--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import DefaultLayout from "$lib/layouts/default.astro";
 ---
 
 <DefaultLayout>
-	<div class="h-screen text-center text-3xl">
+	<div class="text-center text-3xl">
 		<div>
 			<a rel="prefetch" href="/Stat-N-Track/user/300752">Jacob Collins</a>
 		</div>
