Add additional filtered view links to user landing

--- a/src/pages/user/[id]/index.astro
+++ b/src/pages/user/[id]/index.astro
@@ -13,8 +13,17 @@ const { id } = Astro.params;
 		</div>
 		<div>
 			<a rel="prefetch" href=`/Stat-N-Track/user/${id}/standings`
-				>Season Standings</a
+				>All Season Standings</a
 			>
+		</div>
+		<div>
+			<a rel="prefetch" href=`/Stat-N-Track/user/${id}/standings/full-participation`>Fully Participated Season Standings</a>
+		</div>
+		<div>
+			<a rel="prefetch" href=`/Stat-N-Track/user/${id}/standings/by-year`>Season Standings By Year</a>
+		</div>
+		<div>
+			<a rel="prefetch" href=`/Stat-N-Track/user/${id}/standings/by-car-class`>Season Standings By Car</a>
 		</div>
 	</div>
 </DefaultLayout
