--- a/src/lib/layouts/standings.astro
+++ b/src/lib/layouts/standings.astro
@@ -2,59 +2,61 @@
 import fieldIdToLabelMap from "$lib/utils/field-id-to-label-map";
 import DefaultLayout from "$lib/layouts/default.astro";
 const { id, seoTitle, seoDescription, standingsResults } = Astro.props;
-const finalData: Array<Record<string, any>> = standingsResults.map((result: Record<string,any>) => {
-  const {
-    car_class_id,
-    division,
-    division_rank,
-    overall_rank,
-    season_driver_data,
-    season_id,
-    season_name,
-  } = result;
-  const {
-    weeks_counted,
-    starts,
-    wins,
-    top5,
-    top25_percent,
-    poles,
-    avg_start_position,
-    avg_finish_position,
-    avg_field_size,
-    laps,
-    laps_led,
-    incidents,
-    points,
-  } = season_driver_data;
-  const [, year] = season_name.match(/([0-9]{4}) Season/) || [0, 0];
-  const [, season_number_of_year] = season_name.match(/Season ([0-9]{1})/) || [
-    0, 0,
-  ];
-  return {
-    season_id,
-    year,
-    season_number_of_year,
-    car_class_id,
-    division,
-    division_rank,
-    overall_rank,
-    points,
-    season_name,
-    weeks_counted,
-    starts,
-    wins,
-    top5,
-    top25_percent,
-    poles,
-    avg_start_position,
-    avg_finish_position,
-    avg_field_size,
-    laps,
-    laps_led,
-    incidents,
-  };
-});
+const finalData: Array<Record<string, any>> = standingsResults.map(
+  (result: Record<string, any>) => {
+    const {
+      car_class_id,
+      division,
+      division_rank,
+      overall_rank,
+      season_driver_data,
+      season_id,
+      season_name,
+    } = result;
+    const {
+      weeks_counted,
+      starts,
+      wins,
+      top5,
+      top25_percent,
+      poles,
+      avg_start_position,
+      avg_finish_position,
+      avg_field_size,
+      laps,
+      laps_led,
+      incidents,
+      points,
+    } = season_driver_data;
+    const [, year] = season_name.match(/([0-9]{4}) Season/) || [0, 0];
+    const [, season_number_of_year] = season_name.match(
+      /Season ([0-9]{1})/
+    ) || [0, 0];
+    return {
+      season_id,
+      year,
+      season_number_of_year,
+      car_class_id,
+      division,
+      division_rank,
+      overall_rank,
+      points,
+      season_name,
+      weeks_counted,
+      starts,
+      wins,
+      top5,
+      top25_percent,
+      poles,
+      avg_start_position,
+      avg_finish_position,
+      avg_field_size,
+      laps,
+      laps_led,
+      incidents,
+    };
+  }
+);
 ---
 
 <DefaultLayout {seoTitle} {seoDescription}>
