--- a/src/pages/user/[id]/standings/by-car-class/[carClassId].astro
+++ b/src/pages/user/[id]/standings/by-car-class/[carClassId].astro
@@ -4,17 +4,25 @@ import StandingsLayout from "$lib/layouts/standings.astro";
 export async function getStaticPaths() {
   // @todo Establish a root level list of valid userIds
   const userIds = [300752, 815162];
-	const dbConnection = await connectToDatabase();
-	const db = dbConnection.db;
-	const collection = db.collection("standings");
-  const mappings = await Promise.all(userIds.map(async (userId) => ({
-    userId,
-    carClassIds: await collection.distinct("car_class_id", { "season_driver_data.cust_id": Number(userId) }),
-  })));
-  return mappings.map((mapping) => {
-    const { userId, carClassIds } = mapping;
-    return carClassIds.map((carClassId) => ({ params: { id: userId, carClassId }}));
-  }).flat();
+  const dbConnection = await connectToDatabase();
+  const db = dbConnection.db;
+  const collection = db.collection("standings");
+  const mappings = await Promise.all(
+    userIds.map(async (userId) => ({
+      userId,
+      carClassIds: await collection.distinct("car_class_id", {
+        "season_driver_data.cust_id": Number(userId),
+      }),
+    }))
+  );
+  return mappings
+    .map((mapping) => {
+      const { userId, carClassIds } = mapping;
+      return carClassIds.map((carClassId) => ({
+        params: { id: userId, carClassId },
+      }));
+    })
+    .flat();
 }
 
 const { id, carClassId } = Astro.params;
@@ -22,7 +30,10 @@ const dbConnection = await connectToDatabase();
 const { db } = dbConnection;
 const collection = db.collection("standings");
 const standingsResults = await collection
-  .find({ "season_driver_data.cust_id": Number(id), car_class_id: String(carClassId) })
+  .find({
+    "season_driver_data.cust_id": Number(id),
+    car_class_id: String(carClassId),
+  })
   .sort({ season_id: -1 })
   .toArray();
 ---
