Correctly sort subsessions for car class page

--- a/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
+++ b/src/pages/user/[id]/subsessions/by-car-class/[carClassId].astro
@@ -35,7 +35,7 @@ const subsessions = await collection
       $elemMatch: { cust_id: Number(id), car_class_id: Number(carClassId) },
     },
   })
-  .sort({ season_id: -1 })
+  .sort({ _id: -1 })
   .toArray();
 ---
 
