--- a/src/pages/user/[id]/index.astro
+++ b/src/pages/user/[id]/index.astro
@@ -1,7 +1,8 @@
 ---
 import DefaultLayout from "$lib/layouts/default.astro";
+import userIds from "$lib/utils/user-ids";
 export function getStaticPaths() {
-  return [{ params: { id: 300752 } }, { params: { id: 815162 } }];
+  return userIds.map((id) => ({ params: { id } }));
 }
 const { id } = Astro.params;
 ---
