--- a/src/pages/user/[id]/standings/by-car-class/index.astro
+++ b/src/pages/user/[id]/standings/by-car-class/index.astro
@@ -1,9 +1,10 @@
 ---
   import { connectToDatabase } from "$lib/mongodb";
   import DefaultLayout from "$lib/layouts/default.astro";
-  export function getStaticPaths() {
-	  return [{ params: { id: 300752 } }, { params: { id: 815162 } }];
-  }
+	import userIds from "$lib/utils/user-ids";
+	export function getStaticPaths() {
+		return userIds.map((id) => ({ params: { id } }));
+	}
   const { id } = Astro.params;
 	const dbConnection = await connectToDatabase();
 	const db = dbConnection.db;
