--- a/src/pages/user/[id]/standings/index.astro
+++ b/src/pages/user/[id]/standings/index.astro
@@ -1,8 +1,9 @@
 ---
 import { connectToDatabase } from "$lib/mongodb";
 import StandingsLayout from "$lib/layouts/standings.astro";
+import userIds from "$lib/utils/user-ids";
 export function getStaticPaths() {
-  return [{ params: { id: 300752 } }, { params: { id: 815162 } }];
+  return userIds.map((id) => ({ params: { id } }));
 }
 const { id } = Astro.params;
 const dbConnection = await connectToDatabase();
