--- a/src/pages/user/[id]/subsessions/by-year/index.astro
+++ b/src/pages/user/[id]/subsessions/by-year/index.astro
@@ -1,8 +1,9 @@
 ---
   import { connectToDatabase } from "$lib/mongodb";
   import DefaultLayout from "$lib/layouts/default.astro";
+  import userIds from "$lib/utils/user-ids";
   export function getStaticPaths() {
-	  return [{ params: { id: 300752 } }, { params: { id: 815162 } }];
+    return userIds.map((id) => ({ params: { id } }));
   }
   const { id } = Astro.params;
   const dbConnection = await connectToDatabase();
