Include link to scheduling page in DefaultLayout

--- a/src/pages/user/[id]/index.astro
+++ b/src/pages/user/[id]/index.astro
@@ -10,6 +10,11 @@ const { id } = Astro.params;
 <DefaultLayout>
   <div class="h-screen text-center text-3xl">
     <div>
+      <a rel="prefetch" href=`/Stat-N-Track/user/${id}/scheduling`
+        >Scheduling</a
+      >
+    </div>
+    <div>
       <a rel="prefetch" href=`/Stat-N-Track/user/${id}/subsessions`
         >All Sessions</a
       >
