--- a/src/lib/components/subsession/header.astro
+++ b/src/lib/components/subsession/header.astro
@@ -1,5 +1,5 @@
 ---
-import { Image } from "@astrojs/image/components";
+import { Image } from "astro:assets";
 import type { Subsession } from "$lib/types";
 interface Props {
   subsession: Subsession;
