Use p tags for relavantIds

--- a/src/lib/components/subsession/relevantIds.astro
+++ b/src/lib/components/subsession/relevantIds.astro
@@ -40,6 +40,6 @@ const otherRelevantIdsList = Object.keys(relevantIdMap)
 
 <div class="text-center row-span-1">
   Relevant IDs
-  {relevantIds.map((id) => <li>{id}</li>)}
-  {otherRelevantIdsList.map((value) => <li>{value}</li>)}
+  {relevantIds.map((id) => <p>{id}</p>)}
+  {otherRelevantIdsList.map((value) => <p>{value}</p>)}
 </div>
