Include HEAT property in tables component

--- a/src/pages/subsession/[id].astro
+++ b/src/pages/subsession/[id].astro
@@ -60,6 +60,7 @@ const {
 			Alpine.data("tables", () => ({
 				PRACTICE: false,
 				QUALIFY: false,
+				HEAT: false,
 				RACE: false,
 				toggle() {
 					this.$el.id.split(" ").forEach((id, index) => {
@@ -73,6 +74,7 @@ const {
 			}));
 			Alpine.data("PRACTICE", Table);
 			Alpine.data("QUALIFY", Table);
+			Alpine.data("HEAT", Table);
 			Alpine.data("RACE", Table);
 			Alpine.start();
 		</script>
