Migrate individual season page to folder structure

--- a/src/pages/user/[id]/season/[seasonId]/index.astro
+++ b/src/pages/user/[id]/season/[seasonId]/index.astro
@@ -150,7 +150,7 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 		</div>
 		<script>
 			import Alpine from "alpinejs";
-			import Table from "../../../../lib/components/table/index.ts";
+			import Table from "../../../../../lib/components/table/index.ts";
 			Alpine.data("table", Table);
 			Alpine.start();
 		</script>
