Add unique titles for Season pages

--- a/src/pages/user/[id]/season/[seasonId]/index.astro
+++ b/src/pages/user/[id]/season/[seasonId]/index.astro
@@ -102,7 +102,7 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 		<link rel="icon" type="image/svg+xml" href="/Stat-N-Track/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>Season: {seasonId}</title>
 	</head>
 	<body class="bg-gray-900 text-white font-sans pt-2">
 		<div class="grid grid-cols-1 pt-6 overflow-x-scroll">
