--- a/src/pages/user/[id]/season/[seasonId]/index.astro
+++ b/src/pages/user/[id]/season/[seasonId]/index.astro
@@ -105,6 +105,11 @@ const { keysArray, handledResults } = handleResults({ keysToDisplay, results });
 		<title>Season: {seasonId}</title>
 	</head>
 	<body class="bg-gray-900 text-white font-sans pt-2">
+		<a rel="prefetch" href=`/Stat-N-Track/user/${id}/season/${seasonId}/season-summary`>
+			<div class="text-center py-4 border-2">
+				<p><b>View Season Summary</b></p>
+			</div>
+		</a>
 		<div class="grid grid-cols-1 pt-6 overflow-x-scroll">
 			<table x-ref="Table" x-data="table" class="text-center col-span-1">
 				<tr x-ref="Headings"
